--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,7 +33,9 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
+  path: ^1.9.1
+  sqflite: ^2.4.2
+  sqflite_common_ffi: ^2.3.6
 
 dev_dependencies:
   flutter_test:
