--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   path: ^1.9.1
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.6
+  flutter_heatmap_calendar: ^1.0.5
 
 dev_dependencies:
   flutter_test:
