--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   sqflite: ^2.4.2
   sqflite_common_ffi: ^2.3.6
   flutter_heatmap_calendar: ^1.0.5
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
