--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,11 @@ dependencies:
   sqflite_common_ffi: ^2.3.6
   flutter_heatmap_calendar: ^1.0.5
   shared_preferences: ^2.5.3
+  syncfusion_flutter_charts: ^31.1.21
+  file_picker: ^8.1.7
+  share_plus: ^10.1.4
+  path_provider: ^2.1.5
+  analog_timer: ^1.0.0
 
 dev_dependencies:
   flutter_test:
